--- a/html.html
+++ b/html.html
@@ -1,8 +1,1 @@
-<html>
-    <title>
-GREATING
-    </title>
-    <body>
-        <h1>goodmorning</h1>
-    </body>
-</html>
+Bangalore (/ˈbæŋɡəlɔːr, ˌbæŋɡəˈlɔːr/ BANG-gə-lor, -⁠LOR), officially Bengaluru (Kannada pronunciation: [ˈbeŋgɐɭuːɾu] ⓘ; ISO: Beṁgaḷūru), is the capital and largest city of the southern Indian state of Karnataka. It has a population of more than 8 million and a metropolitan population of around 15 million, making it India's third most populous city and fourth most populous urban agglomeration. It is the most populous city and largest urban agglomerati
